CHATS_SIT/force-app/main/default/objects/t_sbsd_case_status_mode_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_status_mode_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_status_mode_hist</externalName>
     <fields>
        <fullName>cde_eligty_contnus__c</fullName>
        <description>cde_eligty_contnus</description>
        <externalDeveloperName>cde_eligty_contnus</externalDeveloperName>
        <label>Continuous Eligibility code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_mode_case__c</fullName>
        <description>cde_mode_case</description>
        <externalDeveloperName>cde_mode_case</externalDeveloperName>
        <label>Case mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_change_mode_status__c</fullName>
        <description>cde_reason_change_mode_status</description>
        <externalDeveloperName>cde_reason_change_mode_status</externalDeveloperName>
        <label>Closure/Reopen Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_case__c</fullName>
        <description>cde_status_case</description>
        <externalDeveloperName>cde_status_case</externalDeveloperName>
        <label>Case status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_status_mode__c</fullName>
        <description>idn_sbsd_case_status_mode</description>
        <externalDeveloperName>idn_sbsd_case_status_mode</externalDeveloperName>
        <label>Case Status Mode ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_STATUS_MODE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_STATUS_MODE__c</referenceTo>
        <relationshipLabel>Case Status Mode Legacy History</relationshipLabel>
        <relationshipName>t_sbsd_case_status_mode_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_status_mode_hist__c</fullName>
        <description>idn_sbsd_case_status_mode_hist</description>
        <externalDeveloperName>idn_sbsd_case_status_mode_hist</externalDeveloperName>
        <label>Case Status Mode ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>t_sbsd_case_status_mode_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_appln_new__c</fullName>
        <description>ind_appln_new</description>
        <externalDeveloperName>ind_appln_new</externalDeveloperName>
        <label>New Application?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_mode_status_case__c</fullName>
        <description>nbr_seq_mode_status_case</description>
        <externalDeveloperName>nbr_seq_mode_status_case</externalDeveloperName>
        <label>Number sequence code status case</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Status Mode History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Case Status Mode History</pluralLabel>
</CustomObject>